fix: 修复actionSheet组件api.watchVisible空指针问题和去掉tabs空白padding (#278)
* 修复actionSheet在手机上click无效问题

* 修复pullRefresh组件，数据类型不匹配，导致控制台告警日志超大量打印，导致页面渲染慢的问题

* 修复actionSheet组件api.watchVisible空指针问题和去掉tabs空白padding

--- a/packages/theme-mobile/src/tabs/index.less
+++ b/packages/theme-mobile/src/tabs/index.less
@@ -31,7 +31,6 @@
     font-size: var(--ti-mobile-tabs-font-size, 14px);
     color: var(--ti-mobile-tabs-text-color, #333);
     background: var(--ti-mobile-tabs-bg-color, #fff);
-    padding: 15px 24px;
   }
 
   &__new-tab {
